@@ -1,4 +1,4 @@
 # This Build.PL for Grapheme-Ngram was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use 5.008005;
-use Module::Build::Tiny 0.036;
+use Module::Build::Tiny 0.039;
 Build_PL();
