@@ -26,12 +26,16 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.036"
+            "Module::Build::Tiny" : "0.039"
          }
       },
       "develop" : {
          "requires" : {
-            "Test::Pod" : "1.41"
+            "Test::MinimumVersion" : "0",
+            "Test::Pod" : "1.41",
+            "Test::Pod::Coverage" : "0",
+            "Test::PureASCII" : "0",
+            "Test::Spelling" : "0"
          }
       },
       "runtime" : {
