@@ -3,3 +3,10 @@ requires 'perl', '5.008005';
 on test => sub {
     requires 'Test::More', '0.88';
 };
+
+on 'develop' => sub {
+  requires 'Test::Spelling';
+  requires 'Test::MinimumVersion';
+  requires 'Test::Pod::Coverage';
+  requires 'Test::PureASCII';
+};
