@@ -1,6 +1,7 @@
 Revision history for Grapheme::Ngram
 
 {{$NEXT}}
+       - improved tests
 
 0.005  2014-10-09 11:42:26 CEST
        - improved test coverage
